--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.15.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "swiper": "^9.4.1",
     "web-vitals": "^2.1.4"
   },
