--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-icons": "^1.11.1",
     "html-react-parser": "^4.2.2",
     "react": "^18.2.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-router-hash-link": "^2.4.3",
